recuperando dados da pokéapi e renderizando no html

--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
 
   <main>
     <!-- pokemon api image -->
-    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/shiny/6.gif" alt="pokemon" class="pokemon__image">
+    <img src="#" alt="pokemon" class="pokemon__image">
 
     <!-- dados do pokemon -->
     <h1 class="pokemon__data">
-      <span class="pokemon__number">6</span> -
-      <span class="pokemon__name">charizard</span>
+      <span class="pokemon__number"></span> -
+      <span class="pokemon__name"></span>
     </h1>
 
-    <!-- botoes de pesquisa anterior/proximo -->
+    <!-- form de pesquisa -->
     <form class="form">
       <input class="input__search" type="search" required placeholder="pokemon name or number">
     </form>
 
-    <div class="buttons btn_prev">
+    <!-- botoes de acao anterior/proximo -->
+    <div class="buttons">
       <button class="button btn_prev">Prev &lt; </button>
       <button class="button btn_prox">Prox &gt; </button>
     </div>
