--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <!-- botoes de acao anterior/proximo -->
     <div class="buttons">
-      <button class="button btn_prev">Prev &lt; </button>
-      <button class="button btn_prox">Prox &gt; </button>
+      <button class="button btn_prev"> &lt; Prev </button>
+      <button class="button btn_prox"> Prox &gt; </button>
     </div>
 
     <!-- pokedex image -->
