adicionado botão rand

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- botoes de acao anterior/proximo -->
     <div class="buttons">
       <button class="button btn_prev"> &lt; Prev </button>
+      <button class="button btn_rand"> Rand </button>
       <button class="button btn_prox"> Prox &gt; </button>
     </div>
 
